src/Bloco 2 Introdução ao ANTLR-20250225/bloco2/b2_04/PrefixCalculator.g4
grammar PrefixCalculator;

program:
    stat*EOF;

stat: 
    expr ? NEWLINE;

expr: 
    op=('*'|'/'|'+'|'-') expr expr  #ExprPrefix
    | Number                        #ExprNumber;
    

Number: [0-9]+('.'[0-9]+)?; // fixed point real Number
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
